<resources>
    <string name="app_name">Swap</string>
    <string name="alert_email">Email is required</string>
    <string name="alert_password">Password is required</string>
    <string name="alert_name">Name is required</string>
    <string name="alert_last_name">LastName is required</string>
    <string name="alert_birthday">Birthday is required</string>
    <string name="alert_mobile">Mobile is required</string>
    <string name="alert_description">Description is required</string>
    <string name="alert_register_success">Your registration was success</string>
    <string name="alert_exit">One more time to exit</string>
    <string name="alert_error">Check your data</string>
    <string name="hint_username">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_sign_in">SIGN IN</string>
    <string name="hint_sign_up">SIGN UP</string>
    <string name="hint_name">Name</string>
    <string name="hint_last_name">LastName</string>
    <string name="hint_birthday">Birthday</string>
    <string name="hint_mobile">Mobile</string>
    <string name="hint_description">Description</string>
    <string name="hint_beginner">Beginner</string>
    <string name="hint_basic">Basic</string>
    <string name="hint_intermediate">Intermediate</string>
    <string name="hint_advance">Advance</string>
    <string name="hint_country">Select your country</string>
    <string name="hint_gender">Select your gender</string>
    <string name="hint_mother_lng">Select your mother language</string>
    <string name="hint_learn_lng">Select a language to learn</string>
    <string name="hint_male">Male</string>
    <string name="hint_female">Female</string>
    <string name="hint_image">Select a picture</string>
    <string name="hint_login_no_internet">Check your internet connection</string>
    <string name="hint_login_authorization">Your email or password is incorrect</string>
    <string name="hint_image_description">This picture is your profile picture</string>
    <string name="hint_title_register">Register</string>
    <string name="hint_title_home">Swap</string>
    <string name="hint_logo_description">The logo of Swap</string>
    <string name="hint_title_teacher_fragment">Teachers</string>
    <string name="hint_title_lesson_fragment">Lessons</string>
    <string name="hint_languages">Languages</string>
    <string name="hint_wainting">Waiting...</string>
    <string name="hint_accept">Accept</string>
    <string name="hint_cancel">Cancel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_day">Day</string>
    <string name="hint_hour">Hour</string>
    <string name="hint_task">Task</string>
    <string name="hint_Lesson">Lesson</string>
    <string name="hint_status">Status</string>
    <string name="hint_logout">Logout</string>
    <string name="hint_image_teacher">Image of the teacher</string>
    <string name="hint_show">SHOW MORE</string>
</resources>
